--- a/dedicated destinations/Golden_Temple/Gold.html
+++ b/dedicated destinations/Golden_Temple/Gold.html
@@ -41,7 +41,8 @@
             </ul>
 
             <a href="../../index.html#cnt-form" class="contact-btn">
-                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down" fdprocessedid="kglas">Contact Us</button>
+                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down"
+                    fdprocessedid="kglas">Contact Us</button>
             </a>
             <div class="hamburger" data-aos="fade-down">
                 <div class="line"></div>
@@ -65,7 +66,9 @@
 
             <div class="features">
                 <h3><i title="BBQ meal included" class="fa fal fa-utensils"></i> Meal included</h3>
-                <p>Guru Ka Langar (Langar Of Golden Temple) <br> The sewadars (religious volunteers) selflessly prepare and serve hot meals to every individual sitting cross-legged in the pangat (row/line). Daal, chapati, one kind of sabzi, and kheer (rice
+                <p>Guru Ka Langar (Langar Of Golden Temple) <br> The sewadars (religious volunteers) selflessly prepare
+                    and serve hot meals to every individual sitting cross-legged in the pangat (row/line). Daal,
+                    chapati, one kind of sabzi, and kheer (rice
                     pudding), form a part of the servings.</p>
             </div>
 
@@ -91,17 +94,26 @@
             </div>
 
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3397.4798856634816!2d74.87451907541005!3d31.620708674168252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39197ca90747169f%3A0x905b3bed34afb917!2sGolden%20Temple%2C%20Golden%20Temple%20Rd%2C%20Atta%20Mandi%2C%20Katra%20Ahluwalia%2C%20Amritsar%20Cantt.%2C%20Punjab%20143006!5e0!3m2!1sen!2sin!4v1717404472210!5m2!1sen!2sin"
-                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3397.4798856634816!2d74.87451907541005!3d31.620708674168252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39197ca90747169f%3A0x905b3bed34afb917!2sGolden%20Temple%2C%20Golden%20Temple%20Rd%2C%20Atta%20Mandi%2C%20Katra%20Ahluwalia%2C%20Amritsar%20Cantt.%2C%20Punjab%20143006!5e0!3m2!1sen!2sin!4v1717404472210!5m2!1sen!2sin"
+                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
             <div class="description">
                 <h1><u>Description</u></h1> <br>
                 <p>
-                    The Golden Temple is spiritually the most significant shrine in Sikhism. It became a centre of the Singh Sabha Movement between 1883 and the 1920s, and the Punjabi Suba movement between 1947 and 1966. In the early 1980s, the gurdwara became a centre of
-                    conflict between the Indian government and a radical movement led by Jarnail Singh Bhindranwale. In 1984, Prime Minister Indira Gandhi sent in the Indian Army as part of Operation Blue Star, leading to deaths of more than 1,000 soldiers,
-                    militants and civilians, as well as causing much damage to the gurdwara and the destruction of Akal Takht. The gurdwara complex was rebuilt again after the 1984 damage.
-                    <br> The Golden Temple is an open house of worship for all people, from all walks of life and faiths. It has a square plan with four entrances, and a circumambulation path around the pool. The four entrances to the gurudwara symbolises
+                    The Golden Temple is spiritually the most significant shrine in Sikhism. It became a centre of the
+                    Singh Sabha Movement between 1883 and the 1920s, and the Punjabi Suba movement between 1947 and
+                    1966. In the early 1980s, the gurdwara became a centre of
+                    conflict between the Indian government and a radical movement led by Jarnail Singh Bhindranwale. In
+                    1984, Prime Minister Indira Gandhi sent in the Indian Army as part of Operation Blue Star, leading
+                    to deaths of more than 1,000 soldiers,
+                    militants and civilians, as well as causing much damage to the gurdwara and the destruction of Akal
+                    Takht. The gurdwara complex was rebuilt again after the 1984 damage.
+                    <br> The Golden Temple is an open house of worship for all people, from all walks of life and
+                    faiths. It has a square plan with four entrances, and a circumambulation path around the pool. The
+                    four entrances to the gurudwara symbolises
                     the Sikh belief in equality and the Sikh view that all people are welcome into their holy place
 
                 </p>
@@ -141,7 +153,10 @@
             <div class="footer__col">
                 <h4>Address</h4>
                 <div class="mapouter">
-                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas" src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
+                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas"
+                            src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed"
+                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                            href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
                         <style>
                             .mapouter {
                                 position: relative;
@@ -164,11 +179,11 @@
             <div class="footer__col">
                 <h4>Reach Out To Us</h4>
                 <p><span>Email:</span> tour@tourguide.com</p>
-                <p><span>Phone:</span> +91 8562145852</p>
+                <p><span>Phone:</span> +254 717783146</p>
             </div>
         </div>
         <div class="footer__bar">
-            Copyright © 2023 Arpan Chowdhury. All rights reserved.
+            Copyright © 2023 DNX EMPIRE. All rights reserved.
         </div>
     </footer>
 
