--- a/dedicated destinations/Gulmargh/G.html
+++ b/dedicated destinations/Gulmargh/G.html
@@ -41,7 +41,8 @@
             </ul>
 
             <a href="../../index.html#cnt-form" class="contact-btn">
-                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down" fdprocessedid="kglas">Contact Us</button>
+                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down"
+                    fdprocessedid="kglas">Contact Us</button>
             </a>
             <div class="hamburger" data-aos="fade-down">
                 <div class="line"></div>
@@ -55,7 +56,8 @@
         <!---Image Slider----->
         <div class="slider">
             <div class="img-box">
-                <img src="https://t2.gstatic.com/licensed-image?q=tbn:ANd9GcTTFsmx8EYTq7rL77gCALdtP-2Sfs9R4Q67I-AsN1rwg6XCmvOCNW4Bsb9doeJuEy3e" alt="trip" height="250" width="45" alt="" class="slider-img">
+                <img src="https://t2.gstatic.com/licensed-image?q=tbn:ANd9GcTTFsmx8EYTq7rL77gCALdtP-2Sfs9R4Q67I-AsN1rwg6XCmvOCNW4Bsb9doeJuEy3e"
+                    alt="trip" height="250" width="45" alt="" class="slider-img">
             </div>
 
             <!-- Next and Previous Buttons
@@ -65,8 +67,12 @@
 
             <div class="features">
                 <h3><i title="BBQ meal included" class="fa fal fa-utensils"></i> Food Items</h3>
-                <p> The picturesque Kashmir valley is not only a treat for the eyes but a delight for the belly, too. The Kashmiri cuisine is known for its appetizing and delicious preparations, with generous use of spices and dry fruits. This helps the people
-                    of the region to fight the extreme cold weather conditions, but it’s surely also because it just tastes so good. <br> <br> As you would expect, the food of this region has a heavy Mughal influence, and is rich in flavour, because of
+                <p> The picturesque Kashmir valley is not only a treat for the eyes but a delight for the belly, too.
+                    The Kashmiri cuisine is known for its appetizing and delicious preparations, with generous use of
+                    spices and dry fruits. This helps the people
+                    of the region to fight the extreme cold weather conditions, but it’s surely also because it just
+                    tastes so good. <br> <br> As you would expect, the food of this region has a heavy Mughal influence,
+                    and is rich in flavour, because of
                     the use of various spices such as saffron, cloves, cinnamon, ginger, fennel and cardamom.</p>
 
 
@@ -95,16 +101,22 @@
             </div>
 
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13222.945235994688!2d74.36274135611288!3d34.050634620517535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38e1af91308dd977%3A0x7a5cc65c8fb01df7!2sGulmarg%20193403!5e0!3m2!1sen!2sin!4v1717735650854!5m2!1sen!2sin"
-                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13222.945235994688!2d74.36274135611288!3d34.050634620517535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38e1af91308dd977%3A0x7a5cc65c8fb01df7!2sGulmarg%20193403!5e0!3m2!1sen!2sin!4v1717735650854!5m2!1sen!2sin"
+                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
             <div class="description">
                 <h1><u>Description</u></h1> <br>
-                <p> <strong>Gulmarg</strong>, known as Gulmarag in Kashmiri, is a town, hill station, tourist destination, skiing destination, and a notified area committee in the Baramulla district in the Indian union territory of Jammu and Kashmir. It is
-                    located at a distance of 31 km from Baramulla and 49 km from Srinagar. <br><br> Gulmarg has attracted millions of tourists throughout its existence with the scenic beauty of the Himalayan Mountains in the back drop. One of the main
-                    attractions in Gulmarg is the Gulmarg Gondola, <strong>the Highest  Cable Car in the world.
-            </strong>
+                <p> <strong>Gulmarg</strong>, known as Gulmarag in Kashmiri, is a town, hill station, tourist
+                    destination, skiing destination, and a notified area committee in the Baramulla district in the
+                    Indian union territory of Jammu and Kashmir. It is
+                    located at a distance of 31 km from Baramulla and 49 km from Srinagar. <br><br> Gulmarg has
+                    attracted millions of tourists throughout its existence with the scenic beauty of the Himalayan
+                    Mountains in the back drop. One of the main
+                    attractions in Gulmarg is the Gulmarg Gondola, <strong>the Highest Cable Car in the world.
+                    </strong>
                 </p>
             </div>
 
@@ -146,7 +158,10 @@
             <div class="footer__col">
                 <h4>Address</h4>
                 <div class="mapouter">
-                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas" src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
+                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas"
+                            src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed"
+                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                            href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
                         <style>
                             .mapouter {
                                 position: relative;
@@ -169,11 +184,11 @@
             <div class="footer__col">
                 <h4>Reach Out To Us</h4>
                 <p><span>Email:</span> tour@tourguide.com</p>
-                <p><span>Phone:</span> +91 8562145852</p>
+                <p><span>Phone:</span> +254 717783146</p>
             </div>
         </div>
         <div class="footer__bar">
-            Copyright © 2023 Arpan Chowdhury. All rights reserved.
+            Copyright © 2023 DNX EMPIRE. All rights reserved.
         </div>
     </footer>
 
