--- a/dedicated destinations/Hampi/hampi.html
+++ b/dedicated destinations/Hampi/hampi.html
@@ -41,7 +41,8 @@
             </ul>
 
             <a href="../../index.html#cnt-form" class="contact-btn">
-                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down" fdprocessedid="kglas">Contact Us</button>
+                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down"
+                    fdprocessedid="kglas">Contact Us</button>
             </a>
             <div class="hamburger" data-aos="fade-down">
                 <div class="line"></div>
@@ -66,14 +67,19 @@
             <div class="features">
                 <h3><i title="BBQ meal included" class="fa fal fa-utensils"></i> BBQ meal included</h3>
                 <p>Main menu: <br>
-                    <strong>Roti/Bhakri</strong>- It is bread baked on fire or iron skillet and made flat by jowar flour. Bajra and Wheat flour is used as substitute. <br>
+                    <strong>Roti/Bhakri</strong>- It is bread baked on fire or iron skillet and made flat by jowar
+                    flour. Bajra and Wheat flour is used as substitute. <br>
                     <strong>
-                Badane Kaayi
-            </strong> - Brinjal stuffed with dry stuffing of ginger, ground peanut, garam masala, garlic, sesame and salt and then sprinkled onion and other spices. <br>
-                    <strong>Shenga/Ellu chutney</strong> - It is a form of powder or dry chutney made of ground peanut or sesame. <br>
-                    <strong>Ranjaka</strong> - It is also called Kempu chutney is a paste of red chilli and is consumed as a condiment <br>
+                        Badane Kaayi
+                    </strong> - Brinjal stuffed with dry stuffing of ginger, ground peanut, garam masala, garlic, sesame
+                    and salt and then sprinkled onion and other spices. <br>
+                    <strong>Shenga/Ellu chutney</strong> - It is a form of powder or dry chutney made of ground peanut
+                    or sesame. <br>
+                    <strong>Ranjaka</strong> - It is also called Kempu chutney is a paste of red chilli and is consumed
+                    as a condiment <br>
                     <strong>Kosambari</strong> - it is dish with dal and cucumber and carrot fresh
-                    <br> This is a typical menu of a vegetarian North Karnataka meal in Hampi</p>
+                    <br> This is a typical menu of a vegetarian North Karnataka meal in Hampi
+                </p>
             </div>
 
             <div class="features">
@@ -103,16 +109,24 @@
             </div>
 
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7695.596707388672!2d76.4581848408578!3d15.3331897909783!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bb77fd95d4be823%3A0x6e52e05076df36b8!2sHampi%2C%20Karnataka%20583239!5e0!3m2!1sen!2sin!4v1717314844881!5m2!1sen!2sin"
-                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7695.596707388672!2d76.4581848408578!3d15.3331897909783!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bb77fd95d4be823%3A0x6e52e05076df36b8!2sHampi%2C%20Karnataka%20583239!5e0!3m2!1sen!2sin!4v1717314844881!5m2!1sen!2sin"
+                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
             <div class="description">
                 <h1><u>Description</u></h1> <br>
-                <p>Hampi or Vijayanagara is a town in the Vijayanagara district in the Indian state of Karnataka. Located along the Tungabhadra River in the east and center part of the state, Hampi is near the city of Hosapete. It is famous for hosting the
+                <p>Hampi or Vijayanagara is a town in the Vijayanagara district in the Indian state of Karnataka.
+                    Located along the Tungabhadra River in the east and center part of the state, Hampi is near the city
+                    of Hosapete. It is famous for hosting the
                     Hampi Group of Monuments, a UNESCO World Heritage Site.
-                    <br><br> Hampi is mentioned in Ashokan epigraphy and texts such as the Ramayana and the Puranas of Hinduism as Pampaa Devi Tirtha Kshetra. Hampi was a part of Vijayanara, the capital of the Hindu Vijayanagara Empire in the 14th-century.\
-                    It became a center of economic and administrative activity of the Deccan region kingdom founded in opposition to Islamic Sultanates in South India. After over two centuries of rule, the Empire was defeated and abandoned. Since the
+                    <br><br> Hampi is mentioned in Ashokan epigraphy and texts such as the Ramayana and the Puranas of
+                    Hinduism as Pampaa Devi Tirtha Kshetra. Hampi was a part of Vijayanara, the capital of the Hindu
+                    Vijayanagara Empire in the 14th-century.\
+                    It became a center of economic and administrative activity of the Deccan region kingdom founded in
+                    opposition to Islamic Sultanates in South India. After over two centuries of rule, the Empire was
+                    defeated and abandoned. Since the
                     19th-century, its ruins have been an important site for archaeologists and historians
 
                 </p>
@@ -152,7 +166,10 @@
             <div class="footer__col">
                 <h4>Address</h4>
                 <div class="mapouter">
-                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas" src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
+                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas"
+                            src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed"
+                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                            href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
                         <style>
                             .mapouter {
                                 position: relative;
@@ -175,11 +192,11 @@
             <div class="footer__col">
                 <h4>Reach Out To Us</h4>
                 <p><span>Email:</span> tour@tourguide.com</p>
-                <p><span>Phone:</span> +91 8562145852</p>
+                <p><span>Phone:</span> +254 717783146</p>
             </div>
         </div>
         <div class="footer__bar">
-            Copyright © 2023 Arpan Chowdhury. All rights reserved.
+            Copyright © 2023 DNX EMPIRE. All rights reserved.
         </div>
     </footer>
 
