--- a/dedicated-destinations/brazil/start.html
+++ b/dedicated-destinations/brazil/start.html
@@ -30,7 +30,8 @@
     --->
     <div class="nav-container">
         <nav class="newNav">
-            <a href="#" class="nav__logo" data-aos="fade-right" style="text-decoration: none;">Tourguide<span>.</span></a>
+            <a href="#" class="nav__logo" data-aos="fade-right"
+                style="text-decoration: none;">Tourguide<span>.</span></a>
 
             <ul class="navLinks">
                 <li class="link home" data-aos="fade-down"><a href="../../index.html#Home">Home</a></li>
@@ -43,7 +44,8 @@
             </ul>
 
             <a href="../../index.html#cnt-form" class="contact-btn">
-                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down" fdprocessedid="kglas">Contact Us</button>
+                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down"
+                    fdprocessedid="kglas">Contact Us</button>
             </a>
             <div class="hamburger" data-aos="fade-down">
                 <div class="line"></div>
@@ -67,7 +69,8 @@
 
             <div class="features">
                 <h3><i title="BBQ meal included" class="fa fal fa-utensils"></i> BBQ meal included</h3>
-                <p>Main menu: Fresh fish, grilled chicken, pork chops, pasta with red sauce. Appetizers: Greek salad, shrimp saganaki, roasted vegetables, stuffed vine leaves. Vegetarian meal included</p>
+                <p>Main menu: Fresh fish, grilled chicken, pork chops, pasta with red sauce. Appetizers: Greek salad,
+                    shrimp saganaki, roasted vegetables, stuffed vine leaves. Vegetarian meal included</p>
             </div>
 
             <div class="features">
@@ -97,8 +100,10 @@
             </div>
 
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31794489.501127776!2d-73.28702550565832!3d-13.402215185710936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9c59c7ebcc28cf%3A0x295a1506f2293e63!2sBrazil!5e0!3m2!1sen!2sin!4v1708026171844!5m2!1sen!2sin"
-                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31794489.501127776!2d-73.28702550565832!3d-13.402215185710936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9c59c7ebcc28cf%3A0x295a1506f2293e63!2sBrazil!5e0!3m2!1sen!2sin!4v1708026171844!5m2!1sen!2sin"
+                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <!-- Menu Container -->
             <div class="w3-container" id="menu">
@@ -118,13 +123,20 @@
 
                         <p class="w3-text-grey">
 
-                            Brazil, officially the Federative Republic of Brazil, is the largest and easternmost country in South America and in Latin America. Brazil is the world's fifth-largest country by area and the seventh most populous. Its capital is Brasília, and its most
+                            Brazil, officially the Federative Republic of Brazil, is the largest and easternmost country
+                            in South America and in Latin America. Brazil is the world's fifth-largest country by area
+                            and the seventh most populous. Its capital is Brasília, and its most
                             populous city is São Paulo
                             <br><br>
-                            <b>Climate</b>: Dominated by equatorial and tropical climates, northern and central Brazil receives frequent rainfall and experiences higher temperatures. Meanwhile, southern Brazil is characterized by a humid subtropical climate.
-                            Notably, northeast Brazil exhibits a semi-arid climate, receiving less than 700 mm per year of rain.
+                            <b>Climate</b>: Dominated by equatorial and tropical climates, northern and central Brazil
+                            receives frequent rainfall and experiences higher temperatures. Meanwhile, southern Brazil
+                            is characterized by a humid subtropical climate.
+                            Notably, northeast Brazil exhibits a semi-arid climate, receiving less than 700 mm per year
+                            of rain.
                             <br><br>
-                            <b>Cultural Heritage</b>:The cultures of the indigenous Indians, Africans, and Portuguese have together formed the modern Brazilian way of life. The Portuguese culture is by far the dominant of these influences; from it Brazilians
+                            <b>Cultural Heritage</b>:The cultures of the indigenous Indians, Africans, and Portuguese
+                            have together formed the modern Brazilian way of life. The Portuguese culture is by far the
+                            dominant of these influences; from it Brazilians
                             acquired their language, their main religion, and most of their customs.
 
 
@@ -226,7 +238,10 @@
             <div class="footer__col">
                 <h4>Address</h4>
                 <div class="mapouter">
-                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas" src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
+                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas"
+                            src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed"
+                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                            href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
                         <style>
                             .mapouter {
                                 position: relative;
@@ -249,11 +264,11 @@
             <div class="footer__col">
                 <h4>Reach Out To Us</h4>
                 <p><span>Email:</span> tour@tourguide.com</p>
-                <p><span>Phone:</span> +91 8562145852</p>
+                <p><span>Phone:</span> +254 717783146</p>
             </div>
         </div>
         <div class="footer__bar">
-            Copyright © 2023 Arpan Chowdhury. All rights reserved.
+            Copyright © 2023 DNX EMPIRE. All rights reserved.
         </div>
     </footer>
 
