--- a/dedicated-destinations/grand-canyon-national-park-arizona/Grand_start.html
+++ b/dedicated-destinations/grand-canyon-national-park-arizona/Grand_start.html
@@ -30,7 +30,8 @@
     --->
     <div class="nav-container">
         <nav class="newNav">
-            <a href="#" class="nav__logo" data-aos="fade-right" style="text-decoration: none;">Tourguide<span>.</span></a>
+            <a href="#" class="nav__logo" data-aos="fade-right"
+                style="text-decoration: none;">Tourguide<span>.</span></a>
 
             <ul class="navLinks">
                 <li class="link home" data-aos="fade-down"><a href="../../index.html#Home">Home</a></li>
@@ -43,7 +44,8 @@
             </ul>
 
             <a href="../../index.html#cnt-form" class="contact-btn">
-                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down" fdprocessedid="kglas">Contact Us</button>
+                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down"
+                    fdprocessedid="kglas">Contact Us</button>
             </a>
             <div class="hamburger" data-aos="fade-down">
                 <div class="line"></div>
@@ -67,7 +69,8 @@
 
             <div class="features">
                 <h3><i title="BBQ meal included" class="fa fal fa-utensils"></i> BBQ meal included</h3>
-                <p>Main menu: Fresh fish, grilled chicken, pork chops, pasta with red sauce. Appetizers: Greek salad, shrimp saganaki, roasted vegetables, stuffed vine leaves. Vegetarian meal included</p>
+                <p>Main menu: Fresh fish, grilled chicken, pork chops, pasta with red sauce. Appetizers: Greek salad,
+                    shrimp saganaki, roasted vegetables, stuffed vine leaves. Vegetarian meal included</p>
             </div>
 
             <div class="features">
@@ -97,8 +100,10 @@
             </div>
 
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d825374.2947460422!2d-113.50253198752543!3d36.090603204374!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x873312ae759b4d15%3A0x1f38a9bec9912029!2sGrand%20Canyon%20National%20Park!5e0!3m2!1sen!2sin!4v1706193539539!5m2!1sen!2sin"
-                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d825374.2947460422!2d-113.50253198752543!3d36.090603204374!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x873312ae759b4d15%3A0x1f38a9bec9912029!2sGrand%20Canyon%20National%20Park!5e0!3m2!1sen!2sin!4v1706193539539!5m2!1sen!2sin"
+                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <!-- Menu Container -->
             <div class="w3-container" id="menu">
@@ -115,10 +120,17 @@
                     </div>
 
                     <div id="Eat" class="w3-container menu w3-padding-48 w3-card">
-                        The Grand Canyon is a 277-mile-long canyon in Arizona carved by the Colorado River. It's 6,000 feet deep at its deepest point, 18 miles wide, and averages 4,000 feet deep throughout.<br><br> The Grand Canyon is known for its exposed
-                        geologic strata, which include Vishnu schist, Kaibab limestone, gneiss, and schist. The strata rise over a mile above the river and represent one of the world's most complete records of geological history. The geologic formations
-                        at the bottom of the canyon date back 1,800 million years. The Grand Canyon is considered one of the world's natural wonders. It's also known for its fantastic shapes and colors, with imposing peaks, canyons, and ravines within
-                        the canyon walls. <br><br> The canyon's floor has a diverse landscape, including desert areas that can reach 120°F and forests where temperatures can drop to -20°F
+                        The Grand Canyon is a 277-mile-long canyon in Arizona carved by the Colorado River. It's 6,000
+                        feet deep at its deepest point, 18 miles wide, and averages 4,000 feet deep throughout.<br><br>
+                        The Grand Canyon is known for its exposed
+                        geologic strata, which include Vishnu schist, Kaibab limestone, gneiss, and schist. The strata
+                        rise over a mile above the river and represent one of the world's most complete records of
+                        geological history. The geologic formations
+                        at the bottom of the canyon date back 1,800 million years. The Grand Canyon is considered one of
+                        the world's natural wonders. It's also known for its fantastic shapes and colors, with imposing
+                        peaks, canyons, and ravines within
+                        the canyon walls. <br><br> The canyon's floor has a diverse landscape, including desert areas
+                        that can reach 120°F and forests where temperatures can drop to -20°F
 
                         <p class="w3-text-grey">
                     </div>
@@ -210,7 +222,10 @@
             <div class="footer__col">
                 <h4>Address</h4>
                 <div class="mapouter">
-                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas" src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
+                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas"
+                            src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed"
+                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                            href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
                         <style>
                             .mapouter {
                                 position: relative;
@@ -233,11 +248,11 @@
             <div class="footer__col">
                 <h4>Reach Out To Us</h4>
                 <p><span>Email:</span> tour@tourguide.com</p>
-                <p><span>Phone:</span> +91 8562145852</p>
+                <p><span>Phone:</span> +254 717783146</p>
             </div>
         </div>
         <div class="footer__bar">
-            Copyright © 2023 Arpan Chowdhury. All rights reserved.
+            Copyright © 2023 DNX EMPIRE. All rights reserved.
         </div>
     </footer>
 
